Fix homepage calendar in dark mode

--- a/themes/default/assets/src/sass/dark/variables.sass
+++ b/themes/default/assets/src/sass/dark/variables.sass
@@ -4,3 +4,5 @@ $photo-control-border-color: $grey-darker
 
 $partners-background-color: $black-bis
 $footer-main-background-color: $black
+
+$event-details-bg-color: $grey-darker
